add driver timer (not until)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.yandex.android:places:3.4.0'
     implementation 'com.yandex.android:search:3.4.0'
     implementation 'com.yandex.android:transport:3.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
 }
