--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="m">
+        <activity android:name=".view.profile.ProfileDetailView"></activity>
         <activity android:name=".view.getdriver.AddBankCardView" />
         <activity android:name=".view.getdriver.OfferPriceView" />
 
