--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+apply plugin: 'realm-android'
+
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -56,5 +61,6 @@ dependencies {
     implementation 'com.yandex.android:transport:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
-    implementation "androidx.preference:preference:1.1.0"
+    implementation 'androidx.preference:preference:1.1.0'
+
 }
