--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="m">
-        <activity android:name=".view.profile.ProfileDetailView"></activity>
+        <activity android:name=".view.regulardrive.Main2Activity"></activity>
+        <activity android:name=".view.profile.ProfileDetailView" />
         <activity android:name=".view.getdriver.AddBankCardView" />
         <activity android:name=".view.getdriver.OfferPriceView" />
 
