--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,9 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="m">
-        <activity android:name="bonch.dev.view.passanger.profile.ProfileDetailView"></activity>
-        <activity android:name="bonch.dev.view.passanger.getdriver.AddBankCardView" />
-        <activity android:name="bonch.dev.view.passanger.getdriver.OfferPriceView" />
+        <activity android:name=".view.driver.signup.DriverSignupActivity"></activity>
+        <activity android:name=".view.passanger.profile.ProfileDetailView" />
+        <activity android:name=".view.passanger.getdriver.AddBankCardView" />
+        <activity android:name=".view.passanger.getdriver.OfferPriceView" />
 
         <meta-data
             android:name="preloaded_fonts"
