--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="m">
         <activity android:name=".view.driver.signup.DriverSignupActivity"></activity>
-        <activity android:name=".view.passanger.profile.ProfileDetailView" />
+        <activity
+            android:name=".view.passanger.profile.ProfileDetailView"/>
         <activity android:name=".view.passanger.getdriver.AddBankCardView" />
         <activity android:name=".view.passanger.getdriver.OfferPriceView" />
 
