--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="m">
-        <activity android:name=".view.driver.signup.DriverSignupActivity"></activity>
+        <activity android:name=".view.driver.signup.DriverSignupActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".view.passanger.profile.ProfileDetailView" />
         <activity android:name=".view.passanger.getdriver.AddBankCardView" />
         <activity android:name=".view.passanger.getdriver.OfferPriceView" />
