--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.core:core-ktx:1.2.0"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
@@ -49,16 +49,31 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
     testImplementation 'junit:junit:4.12'
 
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+
+    //Custom EdtText
     implementation 'ru.egslava:MaskedEditText:1.0.5'
+
+    //Yandex MapKit
     implementation 'com.yandex.android:mapkit:3.4.0'
     implementation 'com.yandex.android:directions:3.4.0'
     implementation 'com.yandex.android:places:3.4.0'
     implementation 'com.yandex.android:search:3.4.0'
     implementation 'com.yandex.android:transport:3.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+
+    //Glide
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+
+    //Shared Preferences
     implementation 'androidx.preference:preference:1.1.0'
+
+    //Dagger2
+    implementation 'com.google.dagger:dagger-android:2.20'
+    implementation 'com.google.dagger:dagger-android-support:2.20'
+    kapt 'com.google.dagger:dagger-android-processor:2.20'
+    kapt 'com.google.dagger:dagger-compiler:2.20'
 
 }
