--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:screenOrientation="portrait"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.MyAppTheme"
         tools:ignore="LockedOrientationActivity">
         <activity
