--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".presentation.modules.common.checkphoto.CheckPhotoView"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.modules.passanger.getdriver.addcard.view.AddBankCardView"
+            android:name=".presentation.modules.common.addbanking.view.AddBankCardView"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
@@ -48,7 +48,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".presentation.modules.passanger.regulardrive.view.CreateRegularDriveView"
+            android:name=".presentation.modules.passanger.regulardrive.view.MapCreateRegularDrive"
             android:screenOrientation="portrait" />
 
 
