--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
 
         <activity
             android:name=".presentation.modules.passanger.regulardrive.view.MapCreateRegularDrive"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
 
 
         <meta-data
