add services for ride

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
         </activity>
 
         <service
-            android:name=".service.ride.RideService"
+            android:name=".service.ride.passenger.RideService"
             android:enabled="true"
             android:exported="true" />
 
