add services for ride (driver)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,11 @@
             android:enabled="true"
             android:exported="true" />
 
+        <service
+            android:name=".service.ride.driver.RideService"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
 
 
