--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'realm-android'
 
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 29
@@ -16,8 +18,8 @@ android {
         applicationId "bonch.dev.mobile.poputi"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 3
-        versionName "0.2"
+        versionCode 1
+        versionName "0.1"
         testInstrumentationRunner "androidx.bg_thumb.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -36,6 +38,15 @@ android {
 }
 
 dependencies {
+    //Google Firebase
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+
+    //Geo
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    //Default implementations
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:1.1.0"
@@ -90,5 +101,4 @@ dependencies {
     //Skeleton view animation
     implementation 'com.ethanhua:skeleton:1.1.2'
     implementation 'io.supercharge:shimmerlayout:2.1.0'
-
 }
