--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
         <activity android:name=".presentation.modules.common.profile.driver.profits.ProfitsView" />
         <activity android:name="bonch.dev.poputi.presentation.modules.common.profile.story.view.StoryView" />
         <activity android:name="bonch.dev.poputi.presentation.modules.common.profile.story.view.DetailStoryView" />
+        <activity android:name=".presentation.modules.common.profile.passenger.rating.RatingView" />
 
         <service
             android:name="bonch.dev.poputi.service.passenger.PassengerRideService"
