add car info to driver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <activity android:name="bonch.dev.poputi.presentation.modules.common.profile.story.view.DetailStoryView" />
         <activity android:name=".presentation.modules.common.profile.passenger.rating.RatingView" />
         <activity android:name=".presentation.modules.common.profile.city.SelectCityView" />
+        <activity android:name=".presentation.modules.common.profile.driver.carinfo.CarInfoView" />
 
         <service
             android:name="bonch.dev.poputi.service.passenger.PassengerRideService"
