--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,11 +77,13 @@
         <activity android:name=".presentation.modules.common.profile.banking.BankingView" />
         <activity android:name=".presentation.modules.common.profile.passenger.verification.VerifyView" />
         <activity android:name=".presentation.modules.common.profile.driver.profits.ProfitsView" />
-        <activity android:name="bonch.dev.poputi.presentation.modules.common.profile.story.view.StoryView" />
-        <activity android:name="bonch.dev.poputi.presentation.modules.common.profile.story.view.DetailStoryView" />
+        <activity android:name=".presentation.modules.common.profile.story.view.StoryView" />
+        <activity android:name=".presentation.modules.common.profile.story.view.DetailStoryView" />
         <activity android:name=".presentation.modules.common.profile.passenger.rating.RatingView" />
         <activity android:name=".presentation.modules.common.profile.city.SelectCityView" />
         <activity android:name=".presentation.modules.common.profile.driver.carinfo.CarInfoView" />
+        <activity android:name=".presentation.modules.common.profile.language.ChangeLangView" />
+        <activity android:name=".presentation.modules.common.profile.support.SupportView" />
 
         <service
             android:name="bonch.dev.poputi.service.passenger.PassengerRideService"
